<resources>
    <string name="app_name">铜仁家长网校</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_school_bind">SchoolBindActivity</string>
    <string name="title_activity_bank_ic">BankICActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_in_query">考勤查询</string>
    <string name="grade_query">成绩查询</string>
    <string name="title_activity_query_grade">QueryGradeActivity</string>
    <string name="query_grade_search_btn_bg_sel">请输入学生名字查询成绩</string>
    <string name="query_grade_exam_zero">零考成绩</string>
    <string name="query_grade_exam_month">月考成绩</string>
    <string name="query_grade_exam_mid">期中成绩</string>
    <string name="query_grade_exam_end">期末成绩</string>
    <string name="query_grade_title">成绩查询</string>
    <string name="query_txt">查询</string>
    <string name="query_check_in_online_sign_up">在线报名</string>
    <string name="query_check_in">考勤查询</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="say_something">说点什么吧!</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="title_activity_school_info">SchoolInfoActivity</string>
    <string name="title_activity_feature">FeatureActivity</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="title_activity_grade_info">GradeInfoActivity</string>
    <string name="title_activity_grade_by_id">GradeByIdActivity</string>
    <string name="title_activity_parentsclassroom">ParentsClassroomActivity</string>
    <string name="title_activity_healtheducation">HealthEducationActivity</string>
    <string name="title_activity_family">FamilyActivity</string>
    <string name="title_activity_expertsonline">ExpertsOnlineActivity</string>
    <string name="title_activity_expertsonlinecontent">ExpertsOnlineContentActivity</string>
    <string name="title_activity_qand_a">QAndAActivity</string>
    <string name="title_activity_add_q">AddQActivity</string>
    <string name="title_activity_check_in">CheckInActivity</string>
    <string name="title_activity_push">PushActivity</string>
    <string name="title_activity_apply_online">ApplyOnlineActivity</string>
    <string name="title_activity_shop_online">ShopOnlineActivity</string>
    <string name="title_activity_notice_sort">NoticeSortActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_upload_video">UploadVideoActivity</string>
    <string name="title_activity_banner">BannerActivity</string>
    <string name="title_activity_checked_in">CheckedInActivity</string>
    <string name="title_activity_image_brow">ImageBrowActivity</string>
    <string name="title_activity_online_video">OnlineVideoActivity</string>
    <string name="title_activity_parent_child_area">ParentChildAreaActivity</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_expert_list">ExpertListActivity</string>
    <string name="title_activity_expert_det">ExpertDetActivity</string>
    <string name="title_activity_parent_class">ParentClassActivity</string>
    <string name="title_activity_expert_dets">ExpertDetsActivity</string>
</resources>
